--- a/css/navbar.module.css
+++ b/css/navbar.module.css
@@ -122,13 +122,19 @@ display: flex;
 /* justify-content: center; */
 align-items: center;
 }
-
-@media only screen and (min-width: 320px) {
+  .extradiv.scrolled{
+  border-radius: 4rem;
+border: 1px solid rgba(255, 255, 255, 0.05);
+background: rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(50px);
+padding: 0.75rem 0.75rem 0.75rem 2.5rem;
+}
+/* @media only screen and (min-width: 320px) {
   .Navbar {
     backdrop-filter: blur(1.5rem);
     box-shadow: 0px 4px 64px rgba(0, 0, 0, 0.5);
   }
-}
+} */
 
 @media only screen and (min-width: 1024px) {
   .container {
@@ -151,13 +157,7 @@ align-items: center;
     width: 835px;
     
   }
-  .extradiv.scrolled{
-  border-radius: 4rem;
-border: 1px solid rgba(255, 255, 255, 0.05);
-background: rgba(0, 0, 0, 0.25);
-backdrop-filter: blur(50px);
-padding: 0.75rem 0.75rem 0.75rem 2.5rem;
-}
+
 }
 @media only screen and (min-width:1440px){
   .Navbar{
